# MyFSIO

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  docs.md  gunicorn.conf.py  gunicorn_conf.py  pytest.ini  requirements.txt  run.py
app/: __init__.py  access_logging.py  acl.py  admin_api.py  bucket_policies.py  compression.py  config.py  connections.py  encrypted_storage.py  encryption.py  errors.py  extensions.py  gc.py  iam.py  integrity.py  kms.py  kms_api.py  lifecycle.py  notifications.py  object_lock.py  operation_metrics.py  replication.py  s3_api.py  s3_client.py  secret_store.py  site_sync.py  storage.py  ui.py  version.py  website_domains.py
crates/myfsio-auth/: Cargo.toml
crates/myfsio-auth/src/: fernet.rs  iam.rs  lib.rs  principal.rs  sigv4.rs
crates/myfsio-common/: Cargo.toml
crates/myfsio-common/src/: constants.rs  error.rs  lib.rs  object_lock.rs  types.rs
crates/myfsio-crypto/: Cargo.toml
crates/myfsio-crypto/src/: aes_gcm.rs  encryption.rs  hashing.rs  kms.rs  lib.rs
crates/myfsio-server/: Cargo.toml
crates/myfsio-server/src/: config.rs  embedded.rs  lib.rs  main.rs  s3_response.rs  session.rs  state.rs  templates.rs  ui_format.rs
crates/myfsio-server/src/handlers/: admin.rs  admin_peer.rs  checksum_stream.rs  chunked.rs  config.rs  kms.rs  mod.rs  select.rs  static_assets.rs  ui.rs  ui_api.rs  ui_pages.rs
crates/myfsio-server/src/middleware/: auth.rs  bucket_cors.rs  mod.rs  ratelimit.rs  session.rs  sha_body.rs
crates/myfsio-server/src/services/: access_logging.rs  acl.rs  audit_log.rs  cluster_attest.rs  disk_limiter.rs  gc.rs  integrity.rs  lifecycle.rs  metrics.rs  mod.rs  notifications.rs  object_lock.rs  peer_admin.rs  peer_fetch.rs  replication.rs  replication_ledger.rs  s3_client.rs  safe_http_client.rs  safe_resolver.rs  site_registry.rs  site_sync.rs  system_metrics.rs
crates/myfsio-server/src/stores/: connections.rs
crates/myfsio-server/static/css/: main.css
crates/myfsio-server/static/js/: bucket-detail-main.js  bucket-detail-operations.js  bucket-detail-utils.js  connections-management.js  iam-management.js  metrics.js  ui-core.js
crates/myfsio-server/templates/: 404.html  500.html  _convert.py  audit_log.html  base.html  bucket_detail.html  buckets.html  cluster.html  connections.html  csrf_error.html  docs.html  iam.html  login.html  metrics.html  peer_credentials.html  replication_wizard.html  sites.html  system.html  website_domains.html
crates/myfsio-server/tests/: hardening.rs  integration.rs  leading_slash_key.rs  template_render.rs
crates/myfsio-storage/: Cargo.toml
crates/myfsio-storage/src/: error.rs  fs_backend.rs  lib.rs  listing_index.rs  segments.rs  traits.rs  validation.rs
crates/myfsio-xml/: Cargo.toml
crates/myfsio-xml/src/: request.rs  response.rs
myfsio-engine/: Cargo.toml
myfsio-engine/crates/myfsio-auth/: Cargo.toml
myfsio-engine/crates/myfsio-auth/src/: fernet.rs  iam.rs  lib.rs  sigv4.rs
myfsio-engine/crates/myfsio-common/src/: error.rs  types.rs
myfsio-engine/crates/myfsio-crypto/src/: aes_gcm.rs  encryption.rs
myfsio-engine/crates/myfsio-server/: Cargo.toml
myfsio-engine/crates/myfsio-server/src/: config.rs  lib.rs  main.rs  session.rs  state.rs
myfsio-engine/crates/myfsio-server/src/handlers/: chunked.rs  config.rs  mod.rs  select.rs
myfsio-engine/crates/myfsio-server/src/middleware/: auth.rs  mod.rs  session.rs
myfsio-engine/crates/myfsio-server/src/services/: gc.rs  integrity.rs  metrics.rs  mod.rs  s3_client.rs  site_registry.rs  site_sync.rs  website_domains.rs
myfsio-engine/crates/myfsio-server/templates/: bucket_detail.html  docs.html  sites.html  website_domains.html
myfsio-engine/crates/myfsio-server/tests/: integration.rs
myfsio-engine/crates/myfsio-storage/src/: error.rs  fs_backend.rs  lib.rs  traits.rs  validation.rs
myfsio-engine/crates/myfsio-xml/: Cargo.toml
myfsio-engine/crates/myfsio-xml/src/: lib.rs  response.rs
myfsio_core/: Cargo.toml
myfsio_core/src/: lib.rs  sigv4.rs  storage.rs  streaming.rs
python/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  requirements.txt  run.py
python/app/: __init__.py  bucket_policies.py  config.py  encrypted_storage.py  encryption.py  gc.py  iam.py  kms.py  operation_metrics.py  s3_client.py  secret_store.py  select_content.py  site_registry.py  site_sync.py  system_metrics.py  ui.py  version.py
python/myfsio_core/: pyproject.toml
python/myfsio_core/src/: crypto.rs  hashing.rs  lib.rs  metadata.rs  validation.rs
python/static/js/: bucket-detail-main.js  bucket-detail-upload.js  ui-core.js
python/templates/: bucket_detail.html  csrf_error.html  iam.html  metrics.html  system.html  website_domains.html
python/tests/: conftest.py  test_access_logging.py  test_acl.py  test_api.py  test_api_multipart.py  test_aws_sdk_compat.py  test_gc.py  test_kms_api.py  test_new_api_endpoints.py  test_site_sync.py  test_website_hosting.py
rust/: .dockerignore  Dockerfile  docker-entrypoint.sh
rust/myfsio-engine/: Cargo.toml
rust/myfsio-engine/crates/myfsio-auth/: Cargo.toml
scripts/: install.sh  uninstall.sh
static/css/: main.css
static/js/: bucket-detail-main.js  bucket-detail-upload.js  bucket-detail-utils.js  connections-management.js  iam-management.js  ui-core.js
templates/: 404.html  500.html  base.html  bucket_detail.html  buckets.html  connections.html  docs.html  iam.html  login.html  metrics.html  replication_wizard.html  sites.html  system.html  website_domains.html
tests/: conftest.py  test_api.py  test_api_multipart.py  test_aws_sdk_compat.py  test_boto3_multipart.py  test_conditional_headers.py  test_edge_cases.py  test_encryption.py  test_gc.py  test_iam_lockout.py  test_integrity.py  test_kms_api.py  test_lifecycle.py  test_new_api_endpoints.py  test_notifications.py  test_object_lock.py  test_operation_metrics.py  test_replication.py  test_rust_extensions.py  test_security.py  test_site_sync.py  test_storage_features.py  test_ui_bulk_delete.py  test_ui_docs.py  test_ui_encryption.py  test_ui_pagination.py  test_ui_policy.py
(+61 files in other folders)
