[package]
name = "myfsio-xml"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
myfsio-common = { path = "../myfsio-common" }
quick-xml = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
percent-encoding = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
